# shared-memory-sgd

./: CMakeLists.txt  README.md  build.sh  compile.sh  main.cpp  mnist.cc
include/: cifar10_reader.hpp  mnist.h  utils.h
include/minidnn/: Callback.h  Config.h  EigenStream.h  Layer.h  M_Assert.h  MiniDNN.h  Network.h  NetworkExecutor.h  NetworkTopology.h  Optimizer.h  Output.h  ParameterContainer.h  Parameters.h  RNG.h  ThreadPool.h  utils.h
include/minidnn/Activation/: Identity.h  ReLU.h  Sigmoid.h  Softmax.h
include/minidnn/Callback/: VerboseCallback.h
include/minidnn/Layer/: Convolutional.h  FullyConnected.h  MaxPooling.h
include/minidnn/Optimizer/: AdaGrad.h  RMSProp.h  SGD.h  SGDM.h
include/minidnn/Output/: BinaryClassEntropy.h  MultiClassEntropy.h  RegressionMSE.h
include/minidnn/Parameters/: ConvolutionalParameters.h  FullyConnectedParameters.h  MaxPoolingParameters.h
include/minidnn/Utils/: Convolution.h  FindMax.h  Random.h  sparsepp.h
